chore: remove large binary demo files from repository
- Remove video files (57MB total): *.mp4
- Remove audio files (2.8MB): *.mp3
- Remove image files (384KB): *.jpg, *.jpeg
- Add binary file patterns to .gitignore
- Add README.md with instructions for demo file management

Binary demo files should not be in git repository. Users can:
- Download stock footage/audio for local testing
- Use Git LFS if binary files need version control
- Generate demo files programmatically

Files removed:
- 12433259-uhd_3840_2160_30fps.mp4 (21MB)
- highlight.mp4 (20MB)
- uhd_25fps.mp4 (14MB)
- Claimence1.mp3 (2.8MB)
- Various image files (384KB)

Total size reduction: ~58MB

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ example/.idea/
 
 # Claude Code artifacts (plan files stored in home directory)
 .claude/
+
+# Demo data (large binary files - should use external storage or Git LFS)
+example/assets/demo_data/*.mp4
+example/assets/demo_data/*.MP4
+example/assets/demo_data/*.MOV
+example/assets/demo_data/*.mp3
+example/assets/demo_data/*.wav
+example/assets/demo_data/*.jpg
+example/assets/demo_data/*.jpeg
+example/assets/demo_data/*.png
+example/assets/demo_data/fluttervienna_year_review/
