chore: remove personal/private assets from repository
SECURITY & PRIVACY CLEANUP:
- Remove 50+ personal photos from FlutterVienna meetups
- Remove debugging screencast (5.2MB)
- Remove internal planning document (song-for-example.md)
- Add assets to .gitignore to prevent future commits

Files removed:
- example/assets/fluttervienna_year_review/ (21MB, 50+ photos/videos)
  - Personal photos of community members
  - Phone camera images (PXL_*, IMG_*)
  - Video recordings (.MOV files)
- example/assets/debugging/ (5.2MB screencast)
- example/song-for-example.md (internal planning doc)

Total: ~26MB of personal/private content

These files remain available locally but are no longer tracked in git.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ example/assets/demo_data/*.jpg
 example/assets/demo_data/*.jpeg
 example/assets/demo_data/*.png
 example/assets/demo_data/fluttervienna_year_review/
+
+# Personal/private assets - NOT for public repository
+example/assets/fluttervienna_year_review/
+example/assets/debugging/
+example/song-for-example.md
