chore: update author attribution and remove internal docs
ATTRIBUTION:
- Update LICENSE copyright to Simon Auer
- Add maintainer field to pubspec.yaml
- Add author section to README.md
- Update website footer with correct name

CLEANUP:
- Remove internal planning documents from git tracking
  - example/IMPLEMENTATION_COMPLETE.md
  - example/EXAMPLES_PROGRESS.md
  - website/LAUNCH_CHECKLIST.md
  - website/IMPLEMENTATION_SUMMARY.md
- Add internal docs to .gitignore

These files remain available locally for development reference.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ example/assets/demo_data/fluttervienna_year_review/
 example/assets/fluttervienna_year_review/
 example/assets/debugging/
 example/song-for-example.md
+
+# Internal development/planning documents
+example/IMPLEMENTATION_COMPLETE.md
+example/EXAMPLES_PROGRESS.md
+website/LAUNCH_CHECKLIST.md
+website/IMPLEMENTATION_SUMMARY.md
