--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  path: ^1.8.0
   web: ^1.0.0
   plugin_platform_interface: ^2.0.2
   flutter_riverpod: ^2.4.9
