--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        flutter-version: ['3.19.0', '3.24.0', 'stable']
+        flutter-version: ['3.19.0', '3.24.0', '3.27.0']
 
     steps:
       - uses: actions/checkout@v4
@@ -98,7 +98,7 @@ jobs:
         run: flutter test --coverage
 
       - name: Check coverage threshold (Ubuntu only)
-        if: runner.os == 'Linux' && matrix.flutter-version == 'stable'
+        if: runner.os == 'Linux' && matrix.flutter-version == '3.27.0'
         run: |
           sudo apt-get install -y lcov
           COVERAGE=$(lcov --summary coverage/lcov.info 2>&1 | grep "lines" | grep -oP '\d+\.\d+' | head -1 || echo "0.0")
@@ -109,8 +109,8 @@ jobs:
           fi
           echo "✅ Coverage $COVERAGE% meets 80% requirement"
 
-      - name: Upload coverage (Ubuntu stable only)
-        if: runner.os == 'Linux' && matrix.flutter-version == 'stable'
+      - name: Upload coverage (Ubuntu latest version only)
+        if: runner.os == 'Linux' && matrix.flutter-version == '3.27.0'
         uses: codecov/codecov-action@v4
         with:
           files: coverage/lcov.info
