--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,8 +131,10 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Install FFmpeg
-        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
       - name: Install dependencies
         run: |
