--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+          sudo apt-get install -y ffmpeg clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev xvfb
 
       - name: Install dependencies
         run: |
@@ -143,7 +143,7 @@ jobs:
 
       - name: Run integration tests
         working-directory: example
-        run: flutter test integration_test/ -d linux
+        run: xvfb-run flutter test integration_test/ -d linux
         env:
           FLUTTER_ENABLE_IMPELLER: true
 
